# Quackie-in-Space

./: .gitattributes  .gitignore  README.md  meson.build
client/: Client.cpp  Client.hpp  Decoder.cpp  Decoder.hpp  Network.cpp  Network.hpp  StreamReceiver.cpp  StreamReceiver.hpp  meson.build
media/levels/: fire.tsx  flipped.tsx  lvl1.tmx  lvl2.tmx  lvl3.tmx  tiles.tsx  traps.tsx
media/models/Block/: cube.mtl
media/models/Button/: cube.mtl
server/: main.cpp  meson.build
server/blocks/: Block.cpp  Block.hpp  BlockManager.cpp  BlockManager.hpp  Button.cpp  Button.hpp  ButtonManager.cpp  ButtonManager.hpp  FragileBlock.cpp  FragileBlock.hpp  FragileBlockManager.cpp  FragileBlockManager.hpp  Platform.cpp  Platform.hpp  PlatformManager.cpp  PlatformManager.hpp  Slide.cpp  Slide.hpp  SlideManager.cpp  SlideManager.hpp  Tile.cpp  Tile.hpp  TileManager.cpp  TileManager.hpp
server/eventlisteners/: Collider.hpp  CollisionListener.cpp  CollisionListener.hpp  GUI.cpp  GUI.hpp  InterpolatedObject.cpp  InterpolatedObject.hpp  Keys.cpp  Keys.hpp  Physics.cpp  Physics.hpp  PhysicsListener.hpp
server/game/: Floor.cpp  Floor.hpp  GameManager.cpp  GameManager.hpp  Goal.cpp  Goal.hpp  Key.cpp  Key.hpp  MyVulkanEngine.cpp  MyVulkanEngine.hpp  Player.cpp  Player.hpp
server/parser/: TMXParser.cpp  TMXParser.hpp
server/stream/: Encoder.cpp  Encoder.hpp  EventReceiver.cpp  EventReceiver.hpp  Stream.cpp  Stream.hpp  UDPSend.cpp  UDPSend.hpp
server/traps/: Chainsaw.cpp  Chainsaw.hpp  Fire.cpp  Fire.hpp  LaserBeam.cpp  LaserBeam.hpp  Trap.cpp  Trap.hpp  TrapManager.cpp  TrapManager.hpp
shared/: NetworkDefines.hpp
subprojects/: ViennaVulkanEngine.wrap  tmxlite.wrap
(+18 files in other folders)
